1999-10-04  MORIOKA Tomohiko  <tomo@etl.go.jp>

	* char-ucs.h (MIN_CHAR_OBS_94x94): New macro.
	(MAX_CHAR_OBS_94x94): New macro.
	(breakup_char_1): Support obsolete XEmacs-UCS private code space
	for 94x94 sets.

	* mule-charset.c (put_byte_from_character_table): Change unit size
	from 128 to 256.
	(mark_charset): Don't mark `cs->decoding_table' if `UTF2000' is
	not defined.
	(Fmake_reverse_direction_charset): Modify dummy argument of
	`make_charset' for non-UTF-2000 environment.

1999-10-03  MORIOKA Tomohiko  <tomo@urania.m17n.org>

	* char-ucs.h (MAKE_CHAR): Allow nested decoding-table.

	* mule-charset.c (destroy_byte_from_character_table): New macro.
	(latin_jisx0201_to_ucs): Deleted.
	(latin_iso8859_2_to_ucs): Deleted.
	(latin_iso8859_3_to_ucs): Deleted.
	(latin_iso8859_4_to_ucs): Deleted.
	(latin_iso8859_9_to_ucs): Deleted.
	(latin_viscii_lower_to_ucs): Deleted.
	(latin_viscii_upper_to_ucs): Deleted.
	(mark_charset): Mark `cs->decoding_table'.
	(Fcharset_mapping_table): Fix DOC-string.
	(Fset_charset_mapping_table): New function.
	(syms_of_mule_charset): Add nwe function
	`set-charset-mapping-table'.
	(complex_vars_of_mule_charset): Don't setup and use
	`latin_*_to_ucs'.

1999-10-01  MORIOKA Tomohiko  <tomo@urania.m17n.org>

	* char-ucs.h (MAKE_CHAR): Check the result for range-represented
	charset.

1999-09-30  MORIOKA Tomohiko  <tomo@urania.m17n.org>

	* mule-charset.c (Vcharset_hiragana_jisx0208): New variable.
	(Vcharset_katakana_jisx0208): New variable.
	(Qhiragana_jisx0208): New variable.
	(Qkatakana_jisx0208): New variable.
	(make_charset): Add new argument `byte_offset'.
	(charset_get_byte1): Modify for new coded-charset definition; use
	`XCHARSET_UCS_MIN', `XCHARSET_UCS_MAX', `XCHARSET_CODE_OFFSET' and
	`XCHARSET_BYTE_OFFSET'.
	(Fmake_charset): Modify for `make_charset'.
	(Fmake_reverse_direction_charset): Likewise.
	(syms_of_mule_charset): Add new symbols `hiragana-jisx0208' and
	`katakana-jisx0208'.